Remove obsolete has-login class Make sure navigation content does not wrap

--- a/modules/navigation/_nav-main.scss
+++ b/modules/navigation/_nav-main.scss
@@ -92,18 +92,11 @@
 .nav-main--l2-i {
     @extend %unstyle-list-item;
     @extend %clearfix;
-
-    &._has-login {
-        padding: em(20);
-
-        button {
-            float: right;
-        }
-    }
 }
 
 .nav-main--l2-a {
     @extend %nav-main-a;
+    white-space: nowrap;
 
     &:link,
     &:visited {
